--- a/public/assets/css/stylesHome.css
+++ b/public/assets/css/stylesHome.css
@@ -281,7 +281,10 @@ form.login input[type=submit] {
 
 .page3{
 	text-align: right;
-    color: #606060;
+	color: #606060;
+	max-width: 600px;
+    position: absolute;
+    right: 0;
 }
 
 .page3 b{
