--- a/public/assets/css/stylesHome.css
+++ b/public/assets/css/stylesHome.css
@@ -233,8 +233,8 @@ form.login input[type=submit] {
 	color: #da431c;
 }
 .placeHolder{
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 90%;
 	display: block;
 	overflow-y: auto;
 }
@@ -261,4 +261,85 @@ form.login input[type=submit] {
 
 .placeHolder.voting .postit span{
 	opacity: 1;
+}
+
+.page{
+	width: 95%;
+    height: 95%;
+    position: absolute;
+    margin: 15px auto!important;
+    top: 20px;
+    left: 0;
+    right: 0;
+}
+
+video{
+	position: absolute;
+	max-width: none !important;
+	max-height: none !important;
+}
+
+#SimonSinek {
+    width: 50%;
+    left: 1%;
+    top: 20%;
+}
+#ElValorparaCambiar {
+    width: 62%;
+    left: 1%;
+    top: 28%;
+}
+#Netflix {
+    height: 55%;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 25%;
+}
+video#croacia {
+    width: 40%;
+    left: 10%;
+    top: 2%;
+}
+#princesaDiana {
+    height: 60%;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 25%;
+}
+#GoogleMyLine {
+    width: 68%;
+    left: 2%;
+    top: 6%;
+}
+#cocacola {
+    width: 48%;
+    left: 3%;
+    top: 17%;
+}
+#corona {
+    width: 50%;
+    left: 5%;
+    top: 31%;
+}
+#falabella {
+    width: 50%;
+    left: 5%;
+    top: 31%;
+}
+#apple {
+    width: 50%;
+    left: 10%;
+    top: 12%;
+}
+#ikea {
+    width: 60%;
+    left: 39%;
+    top: 22%;
+}
+#TOMSTV {
+    width: 60%;
+    top: 24%;
+    left: 37%;
 }
