--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -259,7 +259,15 @@ form.login input[type=submit] {
     padding: 5px;
     border-radius: 5px;
     border: none;
-    cursor: pointer;
+	cursor: pointer;
+	
+}
+#mail, #mail2 {
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+	cursor: pointer;
+	font-weight: bolder;
 }
 #creencia, #proposito {
     display: flex;
